@@ -498,6 +498,12 @@ Changes since version 1.5-8
 Changes since version 1.5-9
 
 	* fixed bug in vcovG for lagged White terms (make pseudo-diagonal in E(u,v)); affected vcovNW
-	* documentation updates (mostly text books of Baltagi and Wooldridge to latest edition, references more specific)
+	
+	* documentation updates (mostly text books of Baltagi and Wooldridge to latest edition,
+	  references are also more specific now)
+	  
+	* pbgtest: fixed/enabled type="F" (F test of lmtest::bgtest) in wrapper pbgtest() and
+	  fixed/enabled passing of argument order.by= [additional argument in
+	  lmtest::bgtest] [tests/testpbgtest.R added, docs updated and extended]
 
 
